[package]
name = "webserver-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
nix = { version = "0.26.2", features = ["hostname"] }
num_cpus = "1.16.0"
serde = "1.0.183"
tokio = {version = "1.31.0", features = ["full"]}
